# grackle

./: .clang-format  .clang-format-ignore  .clang-tidy  .git-blame-ignore-revs  .gitignore  .gitmodules  .hgignore  .hgtags  .pre-commit-config.yaml  .readthedocs.yml  .ruff.toml  .travis.yml  CHANGELOG  CITATION  CITATION.rst  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.rst  LICENSE  README  README.md  README.rst  VERSION  bitbucket-pipelines.yml  bp.sh  build-helper.sh  configure  dependencies.cmake  input  pyproject.toml
bench/: CMakeLists.txt  README.rst
bench/src/: benchmarks.cpp
src/clib/: .ssh.swp  CMakeLists.txt  ErrorExceptions.h  FrozenKeyIdxBiMap.c  FrozenKeyIdxBiMap.h  FrozenKeyIdxBiMap_details.h  LUT.hpp  Make.config.assemble  Make.config.objects  Make.config.settings  Make.config.targets  Make.mach.ATERUI  Make.mach.cfca-an  Make.mach.darwin  Make.mach.fedora  Make.mach.hive-gcc  Make.mach.hive-intel  Make.mach.kiken  Make.mach.linux-gnu  Make.mach.nasa-aitken-rome  Make.mach.nasa-pleiades  Make.mach.nci-gadi-intel  Make.mach.ncsa-bluewaters-cray  Make.mach.ncsa-bluewaters-gnu  Make.mach.ncsa-bw  Make.mach.sdsc-comet  Make.mach.summit  Make.mach.tacc-frontera-intel  Make.mach.tacc-stampede  Make.mach.tacc-stampede-gnu  Make.mach.tacc-stampede-intel  Make.mach.tacc-stampede2-intel  Make.mach.tigercpu  Make.mach.travis-ci  Make.mach.uiuc-campus  Make.mach.uiuc-campus-gnu  Make.mach.uiuc-campus-intel  Make.mach.uiuc-campus-pgi  Make.mach.unknown  Make.mach.wheeler-intel  (+274 more)
src/clib/api/: calculate_cooling_time.cpp  calculate_dust_temperature.cpp  calculate_gamma.cpp  calculate_pressure.cpp  calculate_temperature.cpp  set_default_chemistry_parameters.cpp  solve_chemistry.cpp  units.cpp
src/clib/c_wrappers/: wrap_calc_tdust_1d_g.c  wrap_calc_temp_utilities_g.c  wrap_cool1d_cloudy_g.c  wrap_cool1d_cloudy_old_tables_g.c  wrap_interpolators_g.c
src/clib/chemistry/: species.hpp
src/clib/dust/: calc_all_tdust_gasgr_1d_g.cpp  calc_all_tdust_gasgr_1d_g.hpp  calc_gr_balance_g.cpp  calc_gr_balance_g.hpp  calc_grain_size_increment_species_1d.cpp  calc_grain_size_increment_species_1d.hpp  calc_kappa_gr_g.cpp  calc_kappa_gr_g.hpp  calc_kappa_grain.cpp  calc_kappa_grain.hpp  calc_tdust_1d_g.cpp  calc_tdust_1d_g.hpp  calc_tdust_3d.cpp  calc_tdust_3d.hpp  dust_growth_and_destruction.cpp  dust_growth_and_destruction.hpp  gas_heat_cool.hpp  gas_heating_cooling.hpp  grain_species_info.cpp  grain_species_info.hpp  lookup_dust_rates1d.hpp  misc.hpp
src/clib/fields/: get_field_names.c  get_field_names.h  gr_fields.c  gr_fields_private.h  internal_field_data.h
src/clib/inject_model/: README.md  grain_metal_inject_pathways.hpp  inject_path_field_pack.hpp  load_data.cpp  load_data.hpp  misc.hpp  raw_data.cpp  raw_data.hpp
src/clib/interop/: README.md  calc_temp1d_cloudy_g.c  calc_temp1d_cloudy_shim_g.F  cool1d_cloudy_g.c  interop_funcs.def  interop_funcs.h  interpolators_g.c  shims_g.F
src/clib/support/: FrozenKeyIdxBiMap.hpp  FrozenKeyIdxBiMap_detail.hpp  PartMap.hpp  PartSeq.hpp  SimpleVec.hpp  View.hpp  config.hpp  fnv1a_hash.hpp  h5io.cpp  index_helper.cpp  index_helper.hpp  status_reporting.cpp  status_reporting.hpp
src/clib/tabulated/: calc_temp1d_cloudy.cpp  calc_temp1d_cloudy.hpp  common.hpp  (+14 more)
src/example/: CMakeLists.txt  Make.config.targets  Makefile  Makefile.out-of-source  c99_simple_example.c  c_example.c  c_example_nostruct.c  c_local_example.c  c_table_example.c  c_table_example_nostruct.c  cxx_example.C  cxx_grid_example.C  cxx_omp_example.C  cxx_table_example.C  example.C  fortran_example.F  fortran_table_example.F  table_example.C  utest_helpers.hpp
src/grcli/: CMakeLists.txt  ChemistryData.h  FieldData.C  cmd_bench.C  cmd_bench.h  cmd_show.C  cmd_show.h  executor.h  grid_problem.C  grid_problem.h  handle_gr_parameters.C  handle_gr_parameters.h  main.C  operation.C  operation.h  utils.C  utils.h  view.h
src/grtest/: CMakeLists.txt  README.md
src/python/: CMakeLists.txt  Makefile  grackle.pyx  matplotlibrc  pyproject.toml  set_libs  setup.cfg  setup.py
src/tool/: CMakeLists.txt  ChemistryData.h  CliParser.h  FieldData.C  FieldData.h  cmd_bench.C  cmd_bench.h  cmd_show.C  cmd_show.h  executor.h  grid_problem.C  grid_problem.h  handle_gr_parameters.C  handle_gr_parameters.h  main.C  operation.C  operation.h  view.h
tests/: CMakeLists.txt  README.rst
tests/code_examples/: CMakeLists.txt
tests/functional/: CMakeLists.txt  test_func_calc_tdust_1d_g.cpp  test_func_cool1d_cloudy_g.cpp  test_func_cool1d_cloudy_old_tables_g.cpp  test_func_local_solve_chemistry.cpp  test_local_solve_chemistry.cpp
tests/grtestutils/: CMakeLists.txt  GrackleCtxPack.cpp  GrackleCtxPack.hpp  README.md  RuntimeSpLUT.cpp  RuntimeSpLUT.hpp  cmd.cpp  field_container.cpp  field_container.hpp  field_info_detail.cpp  field_info_detail.hpp  fill_field_vals.hpp  iterator_adaptor.hpp  os.cpp  os.hpp  param.cpp  param.hpp  preset.cpp  preset.hpp  ratequery.hpp  utils.cpp  utils.hpp  view.cpp  view.hpp
tests/install-tests/: Dockerfile  conf_reader.py  core.py  docker.py  installtest.Dockerfile  installtest.Dockerfile.dockerignore  installtest.py  vendored_tomli.py
tests/scripts/: c_example_ref.json  castxml_output_reader.py  castxml_wrapper.py  code_example_checker.py
tests/system/: CMakeLists.txt
tests/unit/: .clang-tidy  CMakeLists.txt  grtest_cmd.cpp  grtest_cmd.hpp  grtest_os.cpp  grtest_os.hpp  grtest_utils.cpp  grtest_utils.hpp  test_api_misc.cpp  test_api_ratequery.cpp  test_auto_files.cpp  test_chemistry_struct_synced.cpp  test_data_dir.cpp  test_dynamic_chem_param_api.cpp  test_ghost_zone.cpp  test_grain_species_info.cpp  test_inject_pathway.cpp  test_interpolators.C  test_interpolators_comparisons.cpp  test_interpolators_g.cpp  test_linalg.cpp  test_runtime_splut.cpp  test_sha256.cpp  test_solve_cubic_equation.cpp  test_status_reporting.cpp  test_unit_FrozenKeyIdxBiMap.cpp  test_unit_calc_tdust_1d_g.cpp  test_unit_calc_temp_utilities_g.cpp  test_unit_cool1d_cloudy_g.cpp  test_unit_gr_fields.cpp  test_unit_interpolators_g.cpp  test_visitor.cpp  utest_helpers.hpp
(+281 files in other folders)
