# NOTE: scikit-build-core doesn't use the root-level CMakeLists.txt file,
#       instead we have it use src/python/CMakeLists.txt.
#
# There are 2 reasons for placing this at the root-level directory
# (rather than in src/python):
#   1. it ensures that the source-distribution of our source-directory and the
#      SDist we'll eventually distribute via PyPI will have the same structure
#   2. it ensures that pygrackle can be installable by invoking
#      pip install pygrackle @ git+https://github.com/grackle-project/grackle

[build-system]
requires=[
  "cython",
  "cython-cmake>=0.2",
  # since tool.scikit-build.minimum-version is set to "build-system.requires",
  # the minimum build-requirement for scikit-build-core controls some default
  # behaviors when newer versions of scikit-build-core are installed
  # (we should keep an eye on this and keep increasing it over time)
  "scikit-build-core>=0.10"
]
build-backend = "scikit_build_core.build"

[project]
name = "pygrackle"
description = "A wrapper for the Grackle chemistry library"
# A simpler project could infer used to infer the version number from git:
#    https://scikit-build-core.readthedocs.io/en/latest/configuration.html#dynamic-metadata
# but pygrackle can't (currently) do this since it lives in a "monorepo"
#    https://github.com/pypa/setuptools_scm/issues/1056
version = "1.1.1.dev0"
classifiers=[
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
  "License :: OSI Approved :: BSD License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
keywords=[
  "simulation", "chemistry", "cooling", "astronomy", "astrophysics"
]
requires-python = ">=3.7"
dependencies = [
  'h5py',
  'numpy',
  'matplotlib',
  'yt>=4.0.2'
]

[project.license]
text = "BSD 3-Clause"

[project.urls]
Homepage = 'https://github.com/grackle-project/grackle'
Documentation = 'https://grackle.readthedocs.io/'
Source = 'https://github.com/grackle-project/grackle'
Tracker = 'https://github.com/grackle-project/grackle/issues'

[project.optional-dependencies]
# currently the next line duplicates the dependency-groups purely for
# historical reasons. We should delete the following entry in the near-future
# (since they are actually dependencies of the pygrackle-wheel).
dev = ['flake8', 'packaging', 'pytest', 'sphinx', 'sphinx-tabs', 'furo']

[dependency-groups]
docs = ['sphinx', 'sphinx-tabs', 'furo']
test = ['pytest', 'packaging']
dev = ['flake8', {include-group = "docs"}, {include-group = 'test'}]

[tool.pytest.ini_options]
# settings inspired by: learn.scientific-python.org/development/guides/pytest/
#  -ra: The -r tells pytest to report extra test summary info on the events
#       corresponding to all characters following the r. Here, the "a"
#       corresponds to "all" events (other than passing tests)
#  --showlocals: directs pytest to show local variables in tracebacks
#  --strict-markers: ensures we don't try to use an unspecified fixture
#  --string-config: all configuration mistakes are reported as errors
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
# by default, we treat any test marked xfail that doesn't fail as an error
# (we can override this locally, if necessary)
xfail_strict = true
# limit the directories searched by pytests for the test files
testpaths = [
  "src/python/tests",
]


[tool.scikit-build]
# redirect to the appropriate CMakeLists.txt file
cmake.source-dir = "./src/python"

# if the version of CMake (in {cmake.source-dir}/CMakeLists.txt) isn't found,
# scikit-build-core will download and use a compatible CMake-verison
cmake.version = "CMakeLists.txt"

# The build type to use when building the project. Valid options are: "Debug",
# "Release", "RelWithDebInfo", "MinSizeRel", "", etc.
cmake.build-type = "Release"

# since this is set, this provides a method for backward compatibility.
minimum-version = "build-system.requires"

# The following are all packaging-related and may require tweaking

# Files to exclude from the SDist (even if they're included by default).
# Supports gitignore syntax.
sdist.exclude = [".circleci",".readthedocs.yml"]

# A list of packages to auto-copy into the wheel.
wheel.packages = ["./src/python/pygrackle"]

# A set of patterns to exclude from the wheel. This is additive to the SDist
# exclude patterns.
wheel.exclude = [
    # Per the discussion in gh-220, we have decided not to package pyd files
    # (at least for right now)
    "**.pyd",
    # No need to package template files
    "**.py.in"
]

[tool.ruff]
# This following option adds files to the standard set of ruff's exclusions. It
# contains all python files that were already part of Grackle before we
# introduced ruff
# - per our discussion in GH-#218, we aren't applying formatters to old code
#   yet (to avoid merge-conflicts)
# - We plan to "rip the bandaid off" and remove all the files from this list
#   after the next release
# - No new files should be added to this list
extend-exclude = [
    "config/configure_file.py",
    "config/query_version.py",
    "doc/source/conf.py",
    "src/python/examples/cooling_cell.py",
    "src/python/examples/cooling_rate.py",
    "src/python/examples/freefall.py",
    "src/python/examples/yt_grackle.py",
    "src/python/pygrackle/__init__.py",
    "src/python/pygrackle/api.py",
    "src/python/pygrackle/fluid_container.py",
    "src/python/pygrackle/utilities/__init__.py",
    "src/python/pygrackle/utilities/api.py",
    "src/python/pygrackle/utilities/convenience.py",
    "src/python/pygrackle/utilities/data_path.py",
    "src/python/pygrackle/utilities/evolve.py",
    "src/python/pygrackle/utilities/misc.py",
    "src/python/pygrackle/utilities/model_tests.py",
    "src/python/pygrackle/utilities/physical_constants.py",
    "src/python/pygrackle/utilities/primordial_equilibrium.py",
    "src/python/pygrackle/utilities/testing.py",
    "src/python/pygrackle/utilities/units.py",
    "src/python/pygrackle/yt_fields.py",
    "src/python/tests/conftest.py",
    "src/python/tests/test_chemistry.py",
    "src/python/tests/test_chemistry_struct_synched.py",
    "src/python/tests/test_dynamic_api.py",
    "src/python/tests/test_get_grackle_version.py",
    "src/python/tests/test_initialisation.py",
    "src/python/tests/test_local_functions.py",
    "src/python/tests/test_models.py",
    "src/python/tests/test_primordial.py",
    "src/python/tests/test_query_units.py",
    "src/python/tests/test_specific_heating_rate.py",
    "src/python/tests/test_volumetric_heating_rate.py",
    "src/python/tests/testing_common.py",
    "tests/scripts/code_example_checker.py",
    "src/python/pygrackle/utilities/atomic.py"
]
